; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/atlx/extr_atlx.c_atlx_clear_phy_int.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/atlx/extr_atlx.c_atlx_clear_phy_int.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.atlx_adapter = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.atlx_adapter*)* @atlx_clear_phy_int to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @atlx_clear_phy_int(%struct.atlx_adapter* %0) #0 {
  %2 = alloca %struct.atlx_adapter*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  store %struct.atlx_adapter* %0, %struct.atlx_adapter** %2, align 8
  %5 = load %struct.atlx_adapter*, %struct.atlx_adapter** %2, align 8
  %6 = getelementptr inbounds %struct.atlx_adapter, %struct.atlx_adapter* %5, i32 0, i32 0
  %7 = load i64, i64* %4, align 8
  %8 = call i32 @spin_lock_irqsave(i32* %6, i64 %7)
  %9 = load %struct.atlx_adapter*, %struct.atlx_adapter** %2, align 8
  %10 = getelementptr inbounds %struct.atlx_adapter, %struct.atlx_adapter* %9, i32 0, i32 1
  %11 = call i32 @atlx_read_phy_reg(i32* %10, i32 19, i32* %3)
  %12 = load %struct.atlx_adapter*, %struct.atlx_adapter** %2, align 8
  %13 = getelementptr inbounds %struct.atlx_adapter, %struct.atlx_adapter* %12, i32 0, i32 0
  %14 = load i64, i64* %4, align 8
  %15 = call i32 @spin_unlock_irqrestore(i32* %13, i64 %14)
  ret void
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @atlx_read_phy_reg(i32*, i32, i32*) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
